--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,24 @@
-# Application Configuration
+# CRM System Configuration
 spring.application.name=crm-system
 server.port=8080
 
-# PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/crm_system
-spring.datasource.username=postgres
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+# H2 Console (for debugging)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Connection Pool Configuration
 spring.datasource.hikari.maximum-pool-size=10
@@ -20,12 +26,22 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=600000
 
+# Server Configuration
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+
 # Logging Configuration
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # Development Tools
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+# Management endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
