--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,12 @@
 spring.application.name=crm-system
 server.port=8080
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# Default profile
+spring.profiles.active=h2
 
-# H2 Console (for debugging)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+# ========================================
+# MAIN PROPERTIES
+# ========================================
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
@@ -45,3 +38,28 @@ spring.devtools.livereload.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
+# ========================================
+# H2 DATABASE PROFILE (DEVELOP)
+# ========================================
+
+spring.config.activate.on-profile=h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# ========================================
+# POSTGRESQL PROFILE
+# ========================================
+
+spring.config.activate.on-profile=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/crm_system
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
